# ghostwriter

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.sh  cross-deps.sh  run_eval.sh
.cargo/: config.toml
.github/workflows/: build.yml
evaluation_results/2024-12-21_13-57-31/: results.md
evaluations/tic_tac_toe_1/: result.json  result.out
prompts/: base.json  general.json  text.json  tool_draw_svg.json  tool_draw_text.json
src/: keyboard.rs  lib.rs  main.rs  pen.rs  screenshot.rs  segmenter.rs  touch.rs  util.rs
src/engine/: anthropic.rs  mod.rs
src/llm_engine/: anthropic.rs  google.rs  mod.rs  openai.rs
