[package]
name = "ghostwriter"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
image = "0.25.5"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive"] }
evdev = "0.12.0"
resvg = "0.44.0"
dotenv = "0.15"
imageproc = "0.25.0"
rust-embed="8.5.0"

[lib]
name = "ghostwriter"
path = "src/lib.rs"

[[bin]]
name = "ghostwriter"
path = "src/main.rs"
